--- a/styles.css
+++ b/styles.css
@@ -210,3 +210,9 @@ div[style*="position: fixed; top: 10px; left: 20px; z-index: 1000"] {
     width: 250px;
     height: 30px;
 }
+
+@media (max-width: 768px) {
+    .hide-on-mobile {
+        display: none;
+    }
+}
