--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   font-family: Geneva, AppleGothic, sans-serif;
   font-size: 1em;
+  background-color: #F8F7F3;
 }
 h1 {
   font-size: 2em;
