--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   font-family: Geneva, AppleGothic, sans-serif;
-  font-size: 1em;
+  font-size: 20px;
+  font-weight: 400;
   background-color: #F8F7F3;
 }
 h1 {
